Clean up tests for Average.

--- a/Ix.NET/Source/System.Linq.Async.Tests/System/Linq/Operators/Average.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async.Tests/System/Linq/Operators/Average.Generated.tt
@@ -44,6 +44,12 @@ foreach (var t in types)
     var cs = toCSharp(t);
 #>
         [Fact]
+        public async Task AverageAsync_<#=t.Name#>_Null()
+        {
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAsync(default(IAsyncEnumerable<<#=cs#>>)).AsTask());
+        }
+
+        [Fact]
         public async Task AverageAsync_<#=t.Name#>_Empty()
         {
             var ys = new <#=cs#>[0].ToAsyncEnumerable();
@@ -59,6 +65,13 @@ foreach (var t in types)
         }
 
         [Fact]
+        public async Task AverageAsync_Selector_<#=t.Name#>_Null()
+        {
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAsync(default(IAsyncEnumerable<<#=cs#>>), x => x).AsTask());
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAsync(AsyncEnumerable.Empty<object>(), default(Func<object, <#=cs#>>)).AsTask());
+        }
+
+        [Fact]
         public async Task AverageAsync_Selector_<#=t.Name#>_Empty()
         {
             var ys = new <#=cs#>[0].ToAsyncEnumerable();
@@ -71,6 +84,13 @@ foreach (var t in types)
             var xs = new <#=cs#>[] { 2, 3, 5, 7, 11, 13, 17, 19 };
             var ys = xs.ToAsyncEnumerable();
             Assert.Equal(xs.Average(), await ys.AverageAsync(x => x));
+        }
+
+        [Fact]
+        public async Task AverageAwaitAsync_Selector_<#=t.Name#>_Null()
+        {
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAwaitAsync(default(IAsyncEnumerable<<#=cs#>>), x => new ValueTask<<#=cs#>>(x)).AsTask());
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAwaitAsync(AsyncEnumerable.Empty<object>(), default(Func<object, ValueTask<<#=cs#>>>)).AsTask());
         }
 
         [Fact]
@@ -90,6 +110,13 @@ foreach (var t in types)
 
 #if !NO_DEEP_CANCELLATION
         [Fact]
+        public async Task AverageAwaitWithCancellationAsync_Selector_<#=t.Name#>_Null()
+        {
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAwaitWithCancellationAsync(default(IAsyncEnumerable<<#=cs#>>), (x, ct) => new ValueTask<<#=cs#>>(x)).AsTask());
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAwaitWithCancellationAsync(AsyncEnumerable.Empty<object>(), default(Func<object, CancellationToken, ValueTask<<#=cs#>>>)).AsTask());
+        }
+
+        [Fact]
         public async Task AverageAwaitWithCancellationAsync_Selector_<#=t.Name#>_Empty()
         {
             var ys = new <#=cs#>[0].ToAsyncEnumerable();
@@ -104,6 +131,12 @@ foreach (var t in types)
             Assert.Equal(xs.Average(), await ys.AverageAwaitWithCancellationAsync((x, ct) => new ValueTask<<#=cs#>>(x), CancellationToken.None));
         }
 #endif
+
+        [Fact]
+        public async Task AverageAsync_<#=t.Name#>_Nullable_Null()
+        {
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAsync(default(IAsyncEnumerable<<#=cs#>?>)).AsTask());
+        }
 
         [Fact]
         public async Task AverageAsync_<#=t.Name#>_Nullable_Empty()
@@ -136,6 +169,14 @@ foreach (var t in types)
         }
 
         [Fact]
+        public async Task AverageAwaitAsync_Selector_<#=t.Name#>_Nullable_Null()
+        {
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAwaitAsync(default(IAsyncEnumerable<<#=cs#>?>), x => new ValueTask<<#=cs#>?>(x)).AsTask());
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAwaitAsync(AsyncEnumerable.Empty<object>(), default(Func<object, ValueTask<<#=cs#>?>>)).AsTask());
+        }
+
+
+        [Fact]
         public async Task AverageAwaitAsync_Selector_<#=t.Name#>_Nullable_Empty()
         {
             var ys = new <#=cs#>?[0].ToAsyncEnumerable();
@@ -151,6 +192,13 @@ foreach (var t in types)
         }
 
 #if !NO_DEEP_CANCELLATION
+        [Fact]
+        public async Task AverageAwaitWithCancellationAsync_Selector_<#=t.Name#>_Nullable_Null()
+        {
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAwaitWithCancellationAsync(default(IAsyncEnumerable<<#=cs#>?>), (x, ct) => new ValueTask<<#=cs#>?>(x)).AsTask());
+            await Assert.ThrowsAsync<ArgumentNullException>(() => AsyncEnumerable.AverageAwaitWithCancellationAsync(AsyncEnumerable.Empty<object>(), default(Func<object, CancellationToken, ValueTask<<#=cs#>?>>)).AsTask());
+        }
+
         [Fact]
         public async Task AverageAwaitWithCancellationAsync_Selector_<#=t.Name#>_Nullable_Empty()
         {
